--- a/src/app/edit-appointment/edit-appointment.page.html
+++ b/src/app/edit-appointment/edit-appointment.page.html
@@ -1,29 +1,35 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>edit-appointment</ion-title>
+    <ion-title>
+      Edit Appointment
+    </ion-title>
   </ion-toolbar>
 </ion-header>
-
-<ion-content [fullscreen]="true">
+<ion-content>
   <ion-list lines="full">
-    <form [formGroup] = "updateBookingForm" (ngSubmit) = "updateForm()">
+    <form [formGroup]="updateBookingForm" (ngSubmit)="updateForm()">
       <ion-item>
-        <ion-label position=""floating>Name</ion-label>
-        <ion-input formControlName ="name" type ="text" required></ion-input>
+        <ion-label position="floating">Name</ion-label>
+        <ion-input formControlName="name" type="text" required></ion-input>
       </ion-item>
-
       <ion-item>
-        <ion-label position=""floating>Name</ion-label>
-        <ion-input formControlName ="email" type ="text" required></ion-input>
+        <ion-label position="floating">Email</ion-label>
+        <ion-input formControlName="email" type="text" required>
+        </ion-input>
       </ion-item>
-
       <ion-item>
-        <ion-label position=""floating>Mobile</ion-label>
-        <ion-input formControlName ="mobile" type ="text" required></ion-input>
+        <ion-label position="floating">Mobile</ion-label>
+        <ion-input formControlName="mobile" type="text" required>
+        </ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">location</ion-label>
+        <ion-input formControlName="location" type="text" required>
+        </ion-input>
       </ion-item>
       <ion-row>
         <ion-col>
-          <ion-button type ="submit" color ="primary" shape="full" expand ="block">Update</ion-button>
+          <ion-button type="submit" color="primary" shape="full" expand="block">Update Appointment</ion-button>
         </ion-col>
       </ion-row>
     </form>
