--- a/src/app/make-appointment/make-appointment.page.html
+++ b/src/app/make-appointment/make-appointment.page.html
@@ -3,7 +3,6 @@
     <ion-title class="ios title-ios hydrated">Booking</ion-title>
   </ion-toolbar>
 </ion-header>
-  
 <ion-content>
   <ion-list lines="full">
     <form [formGroup]="bookingForm" (ngSubmit)="formSubmit()">
@@ -11,28 +10,23 @@
         <ion-label position="floating">Name</ion-label>
         <ion-input formControlName="name" type="text" required></ion-input>
       </ion-item>
-  
       <ion-item>
         <ion-label position="floating">Email</ion-label>
-        <ion-input formControlName="email" type="text" required>
-        </ion-input>
+        <ion-input formControlName="email" type="text" required></ion-input>
       </ion-item>
-  
       <ion-item>
-        <ion-label position="floating">Mobile</ion-label>
-        <ion-input formControlName="mobile" type="text" required>
-        </ion-input>
+        <ion-label positionic serveion="floating">Mobile</ion-label>
+        <ion-input formControlName="mobile" type="text" required></ion-input>
       </ion-item>
-  
+      <ion-item>
+        <ion-label positionic serveion="floating">Location</ion-label>
+        <ion-input formControlName="location" type="text" required></ion-input>
+      </ion-item>
       <ion-row>
         <ion-col>
-          <ion-button type="submit" color="primary" shape="full" expand="block">Book 
-          Appointment</ion-button>
+          <ion-button type="submit" color="primary" shape="full" expand="block">Book Appointment</ion-button>
         </ion-col>
-  
       </ion-row>
     </form>
   </ion-list>
 </ion-content>
-  
-  
